Data set complete

--- a/logistic_regression/logistic_regression_library.ipynb
+++ b/logistic_regression/logistic_regression_library.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -11,28 +11,8 @@
      "text": [
       "Shape of data set\n",
       "(4238, 16)\n",
-      "(3390, 16)\n",
-      "   male  age  education  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
-      "0     1   46        NaN              0         0.0     0.0                0   \n",
-      "1     1   35        3.0              1        40.0     0.0                0   \n",
-      "2     0   47        3.0              0         0.0     0.0                0   \n",
-      "3     1   37        2.0              1        30.0     0.0                0   \n",
-      "4     0   65        2.0              0         0.0     0.0                0   \n",
-      "\n",
-      "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
-      "0             0         0    188.0  135.0   95.0  26.84       60.0     78.0   \n",
-      "1             0         0    175.0  112.0   62.5  21.03       73.0     69.0   \n",
-      "2             0         0    294.0  109.0   72.5  28.59       82.0     77.0   \n",
-      "3             0         0    179.0  131.5   81.0  24.99       64.0     68.0   \n",
-      "4             1         0    256.0  149.0   96.0  29.75       90.0     80.0   \n",
-      "\n",
-      "   TenYearCHD  \n",
-      "0           0  \n",
-      "1           1  \n",
-      "2           0  \n",
-      "3           0  \n",
-      "4           1  \n",
-      "male                 0\n",
+      "Nan values in train data \n",
+      " male                 0\n",
       "age                  0\n",
       "education           86\n",
       "currentSmoker        0\n",
@@ -49,28 +29,9 @@
       "glucose            315\n",
       "TenYearCHD           0\n",
       "dtype: int64\n",
-      "(848, 16)\n",
-      "   male  age  education  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
-      "0     1   53        1.0              0         0.0     0.0                0   \n",
-      "1     0   44        1.0              0         0.0     0.0                0   \n",
-      "2     0   44        4.0              0         0.0     0.0                0   \n",
-      "3     0   66        1.0              0         0.0     0.0                0   \n",
-      "4     0   38        1.0              1         9.0     0.0                0   \n",
-      "\n",
-      "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
-      "0             0         0    220.0  127.0   76.0  24.27       75.0     74.0   \n",
-      "1             0         0    195.0  118.0   86.0  23.09       70.0     75.0   \n",
-      "2             0         0    205.0  109.0   73.0  17.48       75.0     57.0   \n",
-      "3             1         0    278.0  187.0   88.0  40.52       90.0     84.0   \n",
-      "4             0         0    224.0   90.0   70.0  18.18       75.0     57.0   \n",
-      "\n",
-      "   TenYearCHD  \n",
-      "0           0  \n",
-      "1           0  \n",
-      "2           0  \n",
-      "3           1  \n",
-      "4           0  \n",
-      "male                0\n",
+      "---------------------------------------------------------\n",
+      "Nan values in test data \n",
+      " male                0\n",
       "age                 0\n",
       "education          19\n",
       "currentSmoker       0\n",
@@ -86,31 +47,57 @@
       "heartRate           0\n",
       "glucose            73\n",
       "TenYearCHD          0\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "Now nan values in train are\n",
+      "0\n",
+      "Now nan values in test are\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# Generate train as well as test csv files after cleansing of the data by framingham university for relations between colestrol and hear disease \n",
     "import numpy as np\n",
     "import pandas as pd \n",
+    "pd.options.mode.chained_assignment = None  # To suppress a warning \n",
     "from sklearn.model_selection import train_test_split\n",
     "data=pd.read_csv(\"framingham.csv\")\n",
     "print(\"Shape of data set\")\n",
     "print(data.shape)\n",
-    "train,test = train_test_split(data,test_size=0.2,shuffle=True,random_state=1)\n",
-    "train=train.reset_index().drop([\"index\"],axis=1)\n",
-    "print(train.shape )\n",
-    "print(train.head())\n",
-    "print(train.isna().sum())\n",
+    "train,test = train_test_split(data,test_size=0.2,shuffle=True,random_state=1)  # splitting the data with shuffling at  shuffling or dropping indexes are not reseted accordingly   and setting random_state so that after shuffling any time data split is same \n",
+    "print(\"Nan values in train data \\n {}\".format(train.isna().sum()))\n",
+    "print(\"---------------------------------------------------------\")\n",
+    "print(\"Nan values in test data \\n {}\".format(test.isna().sum()))\n",
+    "\n",
+    "train=train.dropna(axis=0, how='any')\n",
+    "print(\"Now nan values in train are\")\n",
+    "print(train.isna().sum().sum())\n",
+    "train.insert(0,'ones',1)    # inserting 1 at first column for our vectorised implementation \n",
+    "train=train.to_csv(\"training_data.csv\",index=False)\n",
+    "\n",
+    "test.dropna(axis=0, how='any', inplace=True)   # removing rows (axis = 0)\n",
+    "print(\"Now nan values in test are\")\n",
+    "print(test.isna().sum().sum())\n",
+    "test.insert(0,'ones',1)\n",
+    "test=test.to_csv(\"testing_data.csv\",index=False)\n",
+    "\n",
+    "def normalize(df):\n",
+    "    result = df.copy()\n",
+    "    for column in df.columns:\n",
+    "        max_value = df[column].max()\n",
+    "        min_value = df[column].min()\n",
+    "        if(max_value-min_value!=0):\n",
+    "            result[column] = (df[column] - min_value) / (max_value - min_value) \n",
+    "        else:\n",
+    "            result[column]=df[column]\n",
+    "    return(result) \n",
     "\n",
     "\n",
-    "test=test.reset_index().drop([\"index\"],axis=1)\n",
-    "print(test.shape )\n",
-    "print(test.head())\n",
-    "print(test.isna().sum())\n",
+    "normalised_train=normalize(pd.read_csv(\"training_data.csv\"))\n",
+    "normalised_test=normalize(pd.read_csv(\"testing_data.csv\"))\n",
     "\n",
-    "\n",
+    "normalised_train_data=normalised_train.iloc[:,0:16]\n",
+    "normalised_train_result=normalised_train[\"TenYearCHD\"]\n",
     "\n"
    ]
   },
